<resources>
    <string name="app_name">Midad POS</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="business_name">Business name</string>
    <string name="country">Country</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="next">Next</string>
    <string name="business_type">Business type</string>
    <string name="sign_up">Sign Up</string>
    <string name="termsLink"><![CDATA[<font color ="#000000">I agree to Midad POS </font><a href="https://www.google.com" color= "#9F56DB">Terms of use</a> <font color="#000000">and have read acknowledged </font> <a href="https://www.google.com" color="#9F56DB">Privacy Policy</a>]]></string>
    <string name="ticket">Ticket</string>
    <string name="save">Save</string>
    <string name="charge">Charge</string>
    <string name="search">Search</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="sales">Sales</string>
    <string name="receipts">Receipts</string>
    <string name="items">Items</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="all_items">All Items</string>
    <string name="discounts_items">Discounts</string>
    <string name="clear_ticket">Clear ticket</string>
    <string name="edit_ticket">Edit ticket</string>
    <string name="assign_ticket">Assign ticket</string>
    <string name="merge_ticket">Merge ticket</string>
    <string name="split_ticket">Split ticket</string>
    <string name="in_place">Dine in</string>
    <string name="takeaway">Takeaway</string>
    <string name="delivery">delivery</string>
    <string name="total">Total</string>
    <string name="open_ticket">Open ticket</string>
    <string name="blank_ticket">Blank ticket</string>
    <string name="add_customer_to_ticket">Add customer to ticket</string>
    <string name="add_new_customer">Add new customer</string>
    <string name="most_recent_cust_will_show_here">Your most recent customers will show up here</string>
    <string name="you_have_no_items">You have no items yet</string>
    <string name="go_to_items">Go to items menu to add an item</string>
    <string name="go_to_items2">Go to items</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="postal_code">Postal code</string>
    <string name="customer_code">Customer code</string>
    <string name="note">Note</string>
    <string name="create_customer">Create customer</string>
    <string name="show_all_tickets">Show all tickets</string>
    <string name="cashier">Cashier :</string>
    <string name="refund">Refund</string>
    <string name="pos">POS :</string>
    <string name="card">Card</string>
    <string name="send_email">Send email</string>
    <string name="enter_email">Enter email address</string>
    <string name="send">Send</string>
    <string name="tap_refund">Tap item to refund</string>
    <string name="tap_cancel_refund">Tap item to cancel refund</string>
    <string name="refund_receipt">Refund receipt</string>
    <string name="categories">Categories</string>
    <string name="discounts">Discounts</string>
    <string name="to_add_press">To add the item, press(+)button</string>
    <string name="you_have_no_category">You have no categories yet</string>
    <string name="to_add_category">To add category, press(+) button</string>
    <string name="you_have_no_discounts">You have no discounts yet</string>
    <string name="to_add_discount">To add discounts, press(+) button</string>
    <string name="you_have_no_printers">You have no printers yet</string>
    <string name="to_add_printer">To add printer, press (+) button</string>
    <string name="printers">Printers</string>
    <string name="you_have_no_displays">Yo have no customer displays yet</string>
    <string name="to_add_display">To add a customer display, press (+) button</string>
    <string name="customer_display">Customer displays</string>
    <string name="general">General</string>
    <string name="use_cam_scan_barcodes">Use camera to scan barcodes</string>
    <string name="home_item_layout">Home screen item layout</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="help">Help</string>
    <string name="legal_inf">Legal information</string>
    <string name="help_center">Help center</string>
    <string name="community">Community</string>
    <string name="terms_user">Terms of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="logout">Logout</string>
    <string name="scan">Scan</string>
    <string name="shift">Shift</string>
    <string name="back_office">Back office</string>
    <string name="barcode_scan">Barcode scan</string>
    <string name="cash_management">Cash Management</string>
    <string name="close_shift">Close shift</string>
    <string name="shift_number">Shift number:</string>
    <string name="shift_opened">Shift opened:</string>
    <string name="cash_drawer">Cash drawer</string>
    <string name="starting_cash">Starting cash</string>
    <string name="cash_payments">Cash payments</string>
    <string name="cash_refund">Cash refund</string>
    <string name="paid_in">Paid in</string>
    <string name="paid_out">Paid out</string>
    <string name="expected_cash_amount">Expected cash amount</string>
    <string name="sales_summary">Sales summary</string>
    <string name="gross_sales">Gross sales</string>
    <string name="discount">Discount</string>
    <string name="net_sales">Net Sales</string>
    <string name="cash">Cash</string>
    <string name="enter_start_cash">Enter starting cash amount</string>
    <string name="amount">Amount</string>
    <string name="open_shift">open shift</string>
    <string name="loading">Loading ...</string>
    <string name="shift_report">Shift report</string>
    <string name="shift_closed">Shift closed:</string>
    <string name="actual_cash_amount">Actual cash amount</string>
    <string name="difference">Difference</string>
    <string name="comment">Comment</string>
    <string name="pay_in">Pay in</string>
    <string name="pay_out">Pay out</string>
    <string name="pay_in_out">Pay In/Pay Out</string>
    <string name="check_in">check in</string>
    <string name="checkout">check out</string>
    <string name="clear">Clear</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="time_clock">time clock</string>
    <string name="check_network">Check network connection</string>
    <string name="something_wrong">Something went wrong try again later.</string>
    <string name="confirm">OK</string>
    <string name="store_not_selected">Store is not selected</string>
    <string name="pos_not_selected">POS is not selected</string>
    <string name="select_pos">Select POS</string>
    <string name="continuee">Continue</string>
    <string name="select_store">Select store</string>
    <string name="no_pos"><![CDATA[There are no available pos in store </br> sign out from one of your devices or add one or more pos in]]></string>
    <string name="wrong_pin_code">Wrong pin code</string>
    <string name="create_category">Create category</string>
    <string name="category_name">Category name</string>
    <string name="category_color">Category color</string>
    <string name="assing_items">Assign items</string>
    <string name="create_item">Create item</string>
    <string name="empty_field">This field cannot be blank</string>
    <string name="item">item</string>
    <string name="category">Category</string>
    <string name="assign_items_to_category">Assign items to category</string>
    <string name="sold_by">Sold by</string>
    <string name="each">Each</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="leave_blank">Leave the field blank to indicate the price upon sale</string>
    <string name="cost">Cost</string>
    <string name="sku">SKU</string>
    <string name="barcode">Barcode</string>
    <string name="inventory">Inventory</string>
    <string name="track_stock">Track stock</string>
    <string name="representation_pos">Representation on POS</string>
    <string name="color_shape">Color and shape</string>
    <string name="image">Image</string>
    <string name="ch_photo">Choose photo</string>
    <string name="take_photo">Take photo</string>
    <string name="modifiers">Modifiers</string>
    <string name="taxes">Taxes</string>
    <string name="no_category">No category</string>
    <string name="perm_denied">Permission denied</string>
    <string name="barcode_types">Barcode types</string>
    <string name="wait">wait...</string>
    <string name="suc">Success!</string>
    <string name="variants">Variants</string>
    <string name="variable">Variable</string>
    <string name="deleting">Deleting...</string>
    <string name="edit_category">Edit category</string>
    <string name="delete_category">Delete category</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_sure_delete_cat">Are you sure you want to delete the category?</string>
    <string name="are_sure_delete_item">Are you sure you want to delete the item?</string>
    <string name="creating_cat">Creating category...</string>
    <string name="creating_item">Creating item...</string>
    <string name="delete_item">Delete item</string>
    <string name="edit_item">Edit item</string>
    <string name="updating">Updating...</string>
    <string name="no_existing_items">No existing items found</string>
    <string name="assigning_items">Assigning items...</string>
    <string name="ok">OK</string>
    <string name="discount2">Discount</string>
    <string name="discounts2">Discounts</string>
    <string name="value">Value</string>
    <string name="create_discount">Create discount</string>
    <string name="edit_discount">Edit discount</string>
    <string name="delete_discount">Delete discount</string>
    <string name="amount2">Quantity</string>
    <string name="enter_comment">Enter comment</string>
    <string name="tax">Tax</string>
    <string name="are_you_sure_you_want_to_clear_the_ticket">Are you sure you want to clear the ticket?</string>
    <string name="vat_num">VAT number</string>
    <string name="add_to_ticket">Add to ticket</string>
    <string name="split">Split</string>
    <string name="total_due">Total amount due</string>
    <string name="cash_received">Cash received</string>
    <string name="payments">Payments</string>
    <string name="done">Done</string>
    <string name="remaining">Remaining</string>
    <string name="paid">Paid</string>
    <string name="new_sale">New Sale</string>
    <string name="total_paid">Total paid</string>
    <string name="change">Change</string>
    <string name="due_amount">Due amount</string>
    <string name="shift_is_close">Shift is closed</string>
    <string name="open_shift_to_continue">Open shift to continue</string>
    <string name="shift_alrady_opned">Shift already opened</string>
    <string name="shift_already_closed">Shift already closed</string>
    <string name="remove_from_ticket">Remove from ticket</string>
    <string name="barcode_unique">barcode must be unique</string>
    <string name="tendered">Total tendered</string>
    <string name="inv_date">Invoice date :</string>
    <string name="receipt">Receipt #:</string>
    <string name="bluetooth_printer">Bluetooth printer</string>
    <string name="searching">Searching...</string>
    <string name="print_bill">Print bill</string>
</resources>