<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sales"
            android:checked="true"
            android:icon="@drawable/ic_cart"
            android:title="@string/sales" />
        <item
            android:id="@+id/receipts"
            android:checked="false"
            android:icon="@drawable/ic_recipt"
            android:title="@string/receipts" />
        <item
            android:id="@+id/shift"
            android:checked="false"
            android:icon="@drawable/ic_clock"
            android:title="@string/shift" />
        <item
            android:id="@+id/items"
            android:checked="false"
            android:icon="@drawable/ic_items"
            android:title="@string/items"

            />
        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"

            />


    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/backOffice"
            android:checked="false"
            android:icon="@drawable/ic_statistics"
            android:title="@string/back_office"
            app:showAsAction="never" />
        <item
            android:id="@+id/support"
            android:checked="false"
            android:icon="@drawable/ic_info"
            android:title="@string/support"
            app:showAsAction="never" />

    </group>
</menu>