<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/enter_start_cash"

            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            android:hint="@string/amount"
            android:textColorHint="@color/colorPrimary"


            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:lines="1"
                android:maxLength="10"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnOpenShift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:backgroundTint="@null"
            android:background="@drawable/small_rounded_stroke_primary"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/open_shift"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            />
    </LinearLayout>

</layout>
